--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
   "sample": "sample",
-  "order_card_modal_header": "Нвзвание еды"
+  "order_card_modal_header": "Нвзвание еды",
+  "verify_code": "Проверьте код"
 }
