--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
-  "sample": "sample",
-  "order_card_modal_header": "Нвзвание еды",
-  "verify_code": "Проверьте код"
+	"sample": "sample",
+	"order_card_modal_header": "Нвзвание еды",
+	"verify_code": "Проверьте код",
+	"Open": "Открыто"
 }
