--- a/locales/uz/translation.json
+++ b/locales/uz/translation.json
@@ -1,4 +1,5 @@
 {
-  "sample": "sample",
-  "order_card_modal_header": "Ovqat nomi"
+	"sample": "sample",
+	"order_card_modal_header": "Ovqat nomi",
+	"Open": "Ochiq"
 }
