--- a/locales/cr/translation.json
+++ b/locales/cr/translation.json
@@ -1,4 +1,5 @@
 {
-  "sample": "sample",
-  "order_card_modal_header": "Meal name"
+	"sample": "sample",
+	"order_card_modal_header": "Meal name",
+	"Open": "Очик"
 }
