--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -2,5 +2,6 @@
 	"sample": "sample",
 	"order_card_modal_header": "Нвзвание еды",
 	"verify_code": "Проверьте код",
-	"Open": "Открыто"
+	"Open": "Открыто",
+	"Delivery": "yetkazib berish"
 }
