--- a/locales/uz/translation.json
+++ b/locales/uz/translation.json
@@ -1,5 +1,108 @@
 {
-	"sample": "sample",
-	"order_card_modal_header": "Ovqat nomi",
-	"Open": "Ochiq"
+  "\"Kirish\" tugmasini bosish orqali": "\"Kirish\" tugmasini bosish orqali",
+  "add_new_address": "add_new_address",
+  "All": "All",
+  "All Restaurants": "All Restaurants",
+  "Approximate location": "Approximate location",
+  "Asosiy sahifa": "Asosiy sahifa",
+  "Barchasi": "Barchasi",
+  "Buyurtma": "Buyurtma",
+  "Buyurtma kurerga topshirildi": "Buyurtma kurerga topshirildi",
+  "Buyurtma ma’lumotlari": "Buyurtma ma’lumotlari",
+  "Buyurtma qabul qilindi": "Buyurtma qabul qilindi",
+  "Buyurtma qilish": "Buyurtma qilish",
+  "Buyurtma tayyorlanmoqda (40 daq.)": "Buyurtma tayyorlanmoqda (40 daq.)",
+  "Buyurtma yetkazib berildi": "Buyurtma yetkazib berildi",
+  "Buyurtmalar": "Buyurtmalar",
+  "Buyurtmangiz qabul qilindi.\n\t\t\t\t\t\t\t\tKurer buyurtmangizni\n\t\t\t\t\t\t\t\tbelgilangan vaqtda manzilingizga yetkazib beradi.": "Buyurtmangiz qabul qilindi.\n\t\t\t\t\t\t\t\tKurer buyurtmangizni\n\t\t\t\t\t\t\t\tbelgilangan vaqtda manzilingizga yetkazib beradi.",
+  "Buyurtmani kuzatib borish": "Buyurtmani kuzatib borish",
+  "Cart": "Cart",
+  "Click": "Click",
+  "Closed": "Closed",
+  "Contact": "Contact",
+  "cook_time": "cook_time",
+  "delivery": "delivery",
+  "Delivery": "Delivery",
+  "delivery_cost": "delivery_cost",
+  "delivery_time": "delivery_time",
+  "Edit profile": "Edit profile",
+  "Error while adding to card": "Error while adding to card",
+  "Favorite restorans": "Favorite restorans",
+  "Favourite restaurants": "Favourite restaurants",
+  "Favourite Restaurants": "Favourite Restaurants",
+  "finished": "finished",
+  "foydalanuvchi shartnomasi": "foydalanuvchi shartnomasi",
+  "Home": "Home",
+  "Ism": "Ism",
+  "km": "km",
+  "Location list": "Location list",
+  "Log out": "Log out",
+  "Login": "Login",
+  "Manzillar ro’yxati": "Manzillar ro’yxati",
+  "Manzilni kiriting": "Manzilni kiriting",
+  "meal_cost": "meal_cost",
+  "Menyu": "Menyu",
+  "min": "min",
+  "minut": "minut",
+  "minutes": "minutes",
+  "Name": "Name",
+  "Naqt to’layman": "Naqt to’layman",
+  "No Data found!": "No Data found!",
+  "No location has entered": "No location has entered",
+  "O'zbekcha": "O'zbekcha",
+  "O’zim olib ketaman": "O’zim olib ketaman",
+  "Ochiq": "Ochiq",
+  "Olib ketish": "Olib ketish",
+  "Open": "Ochiq",
+  "Partners": "Partners",
+  "Payme": "Payme",
+  "pending": "pending",
+  "Please select location before submitting": "Please select location before submitting",
+  "Product history": "Product history",
+  "Profile": "Profile",
+  "Questions": "Questions",
+  "raqamiga yuborildi": "raqamiga yuborildi",
+  "Recomended Restaunrants": "Recomended Restaunrants",
+  "Request error": "Request error",
+  "Restoran": "Restoran",
+  "Rules": "Rules",
+  "Saralangan taomlar": "Saralangan taomlar",
+  "Savat": "Savat",
+  "savatga qaytish": "savatga qaytish",
+  "Search meal or restaurants": "Search meal or restaurants",
+  "Search places...": "Search places...",
+  "shartlarini qabul qilaman.": "shartlarini qabul qilaman.",
+  "Signin": "Signin",
+  "soat": "soat",
+  "Street": "Street",
+  "Submit": "Submit",
+  "Submitting": "Submitting",
+  "Surname": "Surname",
+  "Tajribangizni baholang": "Tajribangizni baholang",
+  "Taom narxi": "Taom narxi",
+  "Taom tayyorlash o’rtacha vaqti": "Taom tayyorlash o’rtacha vaqti",
+  "Taom tayyorlash o’rtacha vaqti:": "Taom tayyorlash o’rtacha vaqti:",
+  "Tasdiqlash": "Tasdiqlash",
+  "Tasdiqlash kodi": "Tasdiqlash kodi",
+  "Tayyorlanish o’rtacha vaqti": "Tayyorlanish o’rtacha vaqti",
+  "Telefon raqam": "Telefon raqam",
+  "Telefon raqamingizni tasdiqlash uchun sizga sms orqali kod jo’natiladi.": "Telefon raqamingizni tasdiqlash uchun sizga sms orqali kod jo’natiladi.",
+  "Tizimga kirish": "Tizimga kirish",
+  "To’lov O’zbek so’mida\n\t\t\t\t\t\t\tkurer tomonidan \n\t\t\t\t\t\t\tqabul qilinadi.": "To’lov O’zbek so’mida\n\t\t\t\t\t\t\tkurer tomonidan \n\t\t\t\t\t\t\tqabul qilinadi.",
+  "Toʻlov UzCard bank kartalari orqali qabul qilinadi.": "Toʻlov UzCard bank kartalari orqali qabul qilinadi.",
+  "total_cost": "total_cost",
+  "Umumiy to’lov": "Umumiy to’lov",
+  "User information": "User information",
+  "verify_code": "verify_code",
+  "Yana buyurtma qilish": "Yana buyurtma qilish",
+  "Yangi manzil qo'shish": "Yangi manzil qo'shish",
+  "Yetkazib bering": "Yetkazib bering",
+  "Yetkazib berish": "Yetkazib berish",
+  "Yetkazib berish narxi": "Yetkazib berish narxi",
+  "Yetkazib berish vaqti va narxi": "Yetkazib berish vaqti va narxi",
+  "Yopiq": "Yopiq",
+  "You can add meals only from a single restaurant!": "You can add meals only from a single restaurant!",
+  "Адрес доставки": "Адрес доставки",
+  "Русский": "Русский",
+  "Узбекча": "Узбекча"
 }
